cmake_minimum_required(VERSION 3.10)
project(LibLibreTuner)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)


find_package(Threads REQUIRED)


set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)


file(GLOB_RECURSE NETWORK_CAN_HEADERS ${SOURCE_DIR}/network/can/*.h)
file(GLOB_RECURSE NETWORK_ISOTP_HEADERS ${SOURCE_DIR}/network/isotp/*.h)
file(GLOB_RECURSE NETWORK_UDS_HEADERS ${SOURCE_DIR}/network/uds/*.h)
file(GLOB_RECURSE OS_HEADERS ${SOURCE_DIR}/os/*.h)

file(GLOB_RECURSE NETWORK_CAN_SOURCES ${SOURCE_DIR}/network/can/*.cpp)
file(GLOB_RECURSE NETWORK_ISOTP_SOURCES ${SOURCE_DIR}/network/isotp/*.cpp)
file(GLOB_RECURSE NETWORK_UDS_SOURCES ${SOURCE_DIR}/network/uds/*.cpp)
file(GLOB_RECURSE OS_SOURCES ${SOURCE_DIR}/os/*.cpp)


set(NETWORK_HEADERS
    ${NETWORK_CAN_HEADERS}
    ${NETWORK_ISOTP_HEADERS}
    ${NETWORK_UDS_HEADERS})

set(NETWORK_SOURCES
    ${NETWORK_CAN_SOURCES}
    ${NETWORK_ISOTP_SOURCES}
    ${NETWORK_UDS_SOURCES})



set(HEADERS
    ${NETWORK_HEADERS}
    ${OS_HEADERS})
    
set(SOURCES
    ${NETWORK_SOURCES}
    ${OS_SOURCES})


add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(${PROJECT_NAME} PUBLIC ${SOURCE_DIR})
